[gd_scene load_steps=51 format=2]

[ext_resource path="res://Inventory/popsicle-red.png" type="Texture" id=1]
[ext_resource path="res://World/floppy.png" type="Texture" id=2]
[ext_resource path="res://UI/UI_Flat_Button_Medium_Lock_02a1 copy.png" type="Texture" id=3]
[ext_resource path="res://Inventory/PlayerInventory.gd" type="Script" id=4]
[ext_resource path="res://UI/CoinUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Main Player One Ranger Helmet GREEN three single.png" type="Texture" id=6]
[ext_resource path="res://Inventory/ItemDescription.gd" type="Script" id=7]
[ext_resource path="res://UI/06 Border 01.png" type="Texture" id=8]
[ext_resource path="res://UI/e8ba734de1b8121.png" type="Texture" id=9]
[ext_resource path="res://UI/tilemap_rt_btn_still.png" type="Texture" id=10]
[ext_resource path="res://UI/ps4_gamepad isolated.png" type="Texture" id=11]
[ext_resource path="res://UI/tilemap_top_btn_still.png" type="Texture" id=12]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://UI/map_icon.png" type="Texture" id=14]
[ext_resource path="res://World/ForestWorldMap.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/gdb-playstation-2 R1 Pressed Single.png" type="Texture" id=16]
[ext_resource path="res://UI/map_icon_shadow.png" type="Texture" id=17]
[ext_resource path="res://World/DefaultMapPauseScreen.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.254902, 0.603922, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.133333, 0.360784, 0.423529, 1 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=12]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=13]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=14]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=17]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=18]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=19]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=20]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=21]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=22]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=16]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=23]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=24]
size = 10
extra_spacing_char = 3
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.866667, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.176471, 0.32549, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.133333, 0.360784, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.866667, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.176471, 0.32549, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.133333, 0.360784, 0.423529, 1 )

[node name="PlayerInventory" type="Node2D"]
pause_mode = 2
scale = Vector2( 0.7, 0.7 )
z_index = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.482353 )
margin_left = -16.0
margin_top = -17.0
margin_right = 96.0
margin_bottom = 29.0
rect_scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 151.429, 54.2857 )
scale = Vector2( 6, 3 )
texture = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
margin_right = 304.0
margin_bottom = 104.0
rect_min_size = Vector2( 304, 104 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 104.0

[node name="Panel" type="Panel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )

[node name="PSPI" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Panel"]
margin_left = 4.0
margin_top = 5.0
margin_right = 145.0
margin_bottom = 39.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/normal_font = SubResource( 1 )
text = "Inventory"

[node name="Button" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
pause_mode = 2
self_modulate = Color( 0.780392, 0.788235, 0.792157, 1 )
margin_top = 34.0
margin_right = 200.0
margin_bottom = 54.0
icon = ExtResource( 1 )
expand_icon = true

[node name="RPOP" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button"]
margin_left = 60.0
margin_top = 1.0
margin_right = 221.0
margin_bottom = 51.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/normal_font = SubResource( 2 )
text = "RED POP   x
"

[node name="RPOPQ" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button"]
margin_left = 172.857
margin_top = -2.0
margin_right = 189.857
margin_bottom = 42.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="Button2" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color( 0.780392, 0.788235, 0.792157, 1 )
margin_top = 58.0
margin_right = 200.0
margin_bottom = 78.0
icon = ExtResource( 2 )
expand_icon = true

[node name="BPOP" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button2"]
margin_left = 60.0
margin_top = 0.57143
margin_right = 169.0
margin_bottom = 24.5714
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/normal_font = SubResource( 4 )
text = "F. Disk    x "

[node name="BPOPQ" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button2"]
margin_left = 172.857
margin_top = -2.28571
margin_right = 212.857
margin_bottom = 37.7143
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "0"

[node name="Button3" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 22 )
custom_styles/focus = SubResource( 27 )
custom_styles/normal = SubResource( 32 )
expand_icon = true

[node name="SUNDAE" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button3"]
margin_left = 20.0
margin_top = 2.28571
margin_right = 155.0
margin_bottom = 32.2857
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]R e s u m e"
text = "R e s u m e"

[node name="SUNDAEQ" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/Button3"]
visible = false
margin_left = 162.857
margin_top = -2.0
margin_right = 202.857
margin_bottom = 38.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 7 )
text = "0"

[node name="Panel" type="Panel" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 100 )

[node name="ItemDescription" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = 18.5714
margin_right = -34.0
margin_bottom = -19.4286
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[right] +2 health [/right]"
text = " +2 health "
scroll_active = false
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Control/CenterContainer/HBoxContainer/Panel"]
position = Vector2( 15, 18 )
texture = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
margin_left = 3.14285
margin_top = 35.7143
margin_right = 74.1428
margin_bottom = 75.7143
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 9 )
text = "Quest:"

[node name="CellKeyText" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
margin_left = 3.14284
margin_top = 48.5714
margin_right = 158.143
margin_bottom = 65.5714
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 10 )
text = "- Find 3 Cell Keys (0/3)"

[node name="AnimalsText" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
margin_left = 3.14285
margin_top = 58.5714
margin_right = 158.143
margin_bottom = 75.5714
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 11 )
text = "- Free Animals (0/3)"

[node name="ExitKey" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
margin_left = 3.14285
margin_top = 68.5714
margin_right = 158.143
margin_bottom = 85.5714
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = SubResource( 12 )
text = "- Find Exit Key"

[node name="CellCheckSprite" type="Sprite" parent="Control/CenterContainer/HBoxContainer/Panel"]
position = Vector2( 78, 52 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="CellCheckSprite2" type="Sprite" parent="Control/CenterContainer/HBoxContainer/Panel"]
position = Vector2( 65, 62.857 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="CellCheckSprite3" type="Sprite" parent="Control/CenterContainer/HBoxContainer/Panel"]
position = Vector2( 65, 72.857 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="LevelText" type="RichTextLabel" parent="Control/CenterContainer/HBoxContainer/Panel"]
margin_left = 64.5714
margin_top = 1.42857
margin_right = 137.571
margin_bottom = 18.4286
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 15 )
text = "Level 1"

[node name="CoinUI" parent="." instance=ExtResource( 5 )]
margin_left = 207.0
margin_top = 83.0
margin_right = 244.0
margin_bottom = 102.0

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 271.664, 97 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 271.664, 84.5214 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 279.243
margin_top = 92.743
margin_right = 368.243
margin_bottom = 132.743
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = SubResource( 13 )
text = "Quit"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 279.364
margin_top = 81.5215
margin_right = 367.364
margin_bottom = 96.5215
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = SubResource( 14 )
text = "Controls"

[node name="ControlsPanel" type="Panel" parent="."]
visible = false
margin_right = 200.0
margin_bottom = 101.0

[node name="Sprite" type="Sprite" parent="ControlsPanel"]
position = Vector2( 101.429, 54.2857 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 77.1428
margin_top = 1.42857
margin_right = 126.143
margin_bottom = 18.4286
custom_fonts/normal_font = SubResource( 17 )
text = "CONTROLS"

[node name="RichTextLabel2" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 8.57143
margin_top = 38.5714
margin_right = 148.571
margin_bottom = 55.5714
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 18 )
text = "Movement ------"

[node name="RichTextLabel3" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 138.571
margin_top = 48.5714
margin_right = 278.571
margin_bottom = 65.5714
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 19 )
text = "-------- Roll / Dodge"

[node name="RichTextLabel6" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 145.714
margin_top = 41.4286
margin_right = 285.714
margin_bottom = 58.4286
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 20 )
text = "-------- Laser"

[node name="RichTextLabel5" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 138.571
margin_top = 32.8571
margin_right = 278.571
margin_bottom = 49.8571
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 21 )
text = "---- Special Attack"

[node name="RichTextLabel4" type="RichTextLabel" parent="ControlsPanel"]
margin_left = 100.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 57.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 22 )
text = "Sword ----"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ForestWorldMap" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 152, 51.429 )
scale = Vector2( 0.19, 0.19 )

[node name="MapShadow" type="Sprite" parent="."]
position = Vector2( 292.857, 20 )
scale = Vector2( 0.015, 0.015 )
texture = ExtResource( 17 )

[node name="Map" type="Sprite" parent="."]
position = Vector2( 292, 21 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )

[node name="MapText" type="RichTextLabel" parent="Map"]
margin_left = -285.703
margin_top = 571.429
margin_right = -266.703
margin_bottom = 585.429
rect_scale = Vector2( 30, 30 )
custom_fonts/normal_font = SubResource( 16 )
text = "Map"

[node name="MapButton" type="Sprite" parent="."]
position = Vector2( 275, 20 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 16 )

[node name="DefaultMap" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 152.857, 51.4286 )

[node name="PopupDialog" type="PopupDialog" parent="."]

[node name="Sprite" type="Sprite" parent="PopupDialog"]
position = Vector2( 152.857, 51.4286 )
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog/Sprite"]
margin_left = -28.0
margin_top = -12.0
margin_right = 84.0
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[center]Quit the game?"
text = "Quit the game?"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/Sprite"]
margin_left = -18.0
margin_right = 129.0
margin_bottom = 19.0
rect_scale = Vector2( 0.25, 0.25 )
custom_constants/separation = 38
alignment = 1

[node name="PopUpButton" type="Button" parent="PopupDialog/Sprite/HBoxContainer"]
margin_left = 4.0
margin_right = 59.0
margin_bottom = 19.0
rect_min_size = Vector2( 55, 19 )
custom_fonts/font = SubResource( 24 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 28 )
custom_styles/normal = SubResource( 25 )
text = "Nope"

[node name="QuitConfirm" type="Button" parent="PopupDialog/Sprite/HBoxContainer"]
margin_left = 97.0
margin_right = 142.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 24 )
custom_styles/pressed = SubResource( 31 )
custom_styles/focus = SubResource( 29 )
custom_styles/normal = SubResource( 26 )
text = " Yes "

[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_Button3_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_entered" from="PopupDialog/Sprite/HBoxContainer/PopUpButton" to="." method="_on_PopUpButton_focus_entered"]
[connection signal="pressed" from="PopupDialog/Sprite/HBoxContainer/PopUpButton" to="." method="_on_PopUpButton_pressed"]
[connection signal="focus_entered" from="PopupDialog/Sprite/HBoxContainer/QuitConfirm" to="." method="_on_QuitConfirm_focus_entered"]
[connection signal="pressed" from="PopupDialog/Sprite/HBoxContainer/QuitConfirm" to="." method="_on_QuitConfirm_pressed"]
